--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+
+
 
 	</dependencies>
 
